gobmkida/c2/result_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/result_to_string/src/engine/printutils.c:859:27: error: use of undeclared identifier 'off_4966D8'
return ( const char *)*( &off_4966D8 + result); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/result_to_string/src/obj/1/printutils.o] Error 1
